bitfield/tests/fail/overlapping-range-2.stderr
error: Bitfield range overlaps with another bitfield range
 --> tests/fail/overlapping-range-2.rs:6:19
  |
6 |         b: bool @ 5,
  |                   ^
